# darloof

./: .env.example  .gitignore  README.md  pyproject.toml  wsgi.py
blog/: __init__.py  file_stuffs.py  forms.py  models.py  routes.py
blog/static/css/: main.css
blog/templates/: account.html  admin.html  home.html  layout.html  login.html  portfolio.html  post_create.html  register.html
